  better with sudo.
  (Martin <gzlist@googlemail.com>, Parth Malwankar, #376388)

* ``bzr selftest --parallel=fork`` wait for its children avoiding zombies.
  (Vincent Ladeuil, #566670)

* ``bzr selftest`` should not use ui.note() since it's not unicode safe.
  (Vincent Ladeuil, #563997)

* Reduce peak memory by one copy of compressed text.
  (John Arbash Meinel, #566940)

Improvements
************

* ``append_revisions_only`` will no be interpreted as a boolean and a
  warning emitted if illegal values are used. Note that for projects
  that needs to maintain compatibility with previsous bzr versions,
  only 'True' and 'False' strings must be used (previous versions of
  bzr will interpret all strings differing from 'True'
  (case-sensitive) as false.
  (Brian de Alwis, Vincent Ladeuil)

* ``Config.get_user_option_as_bool`` will now warn if a value cannot
  be interpreted as a boolean.
  (Vincent Ladeuil)

Documentation
*************

API Changes
***********

Internals
*********

* Permit bzr to run under ``python -OO`` which reduces the size of bytecode
  files loaded from disk. To ensure docstrings needed for help are never
  stripped, the prefix ``__doc__ =`` should now be used.
  (Martin <gzlist@googlemail.com>)

Testing
*******

 * ``bzr selftest --parallel=subprocess`` now works correctly on win32.
   (Gordon Tyler, #551332)


bzr 2.2b2
#########

:2.2b2: 2010-04-16

This is a somewhat early second beta of the 2.2 series, to fix a python2.4
incompatibility in the 2.2b1 release.  It also includes a swag of
performance, usability and correctness improvements: test feedback on all
of these would be welcome.


New Features
************

* ``bzr diff`` now supports a --format option, which can be used to 
  select alternative diff formats. (Jelmer Vernooij, #555994)

Bug Fixes
*********

* ``bzr dpush``, ``bzr push`` and ``bzr send`` will now issue a warning
  instead of failing when dirty trees are involved. The corresponding